--- a/DailyNotes/2025-07-04.md
+++ b/DailyNotes/2025-07-04.md
@@ -2,7 +2,8 @@
 tags: Daily, Essay, todo, list
 ---
 ## Daily Essay
-
+completed leetcode 118, 119, 121, 125, 136.
+Created [[C_macro]] [[C_inline]] [[C_preprocessor]] [[C_allocate_mem]] notes.
 ## Today Progress
 
 ## Todo List
