--- a/DailyNotes/2025-07-07.md
+++ b/DailyNotes/2025-07-07.md
@@ -1,12 +1,17 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-07
 ---
 ## Daily Essay
+Reply FET-LDP Eric issue, the service is work normally, and ask him to check the condition of alarm for QoS_Failed.
 
+New target is created, create the sideproject, it is the personal web server, it may spand about half year to do this project, please keep it ip and cheer up.
+
+Maybe will abandon golang tech, golang like trash, so deleted ginFizz project.
 ## Today Progress
 
 ## Todo List
+- [ ] Compete [[Golang]] note 🛫 2025-06-27
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
 - [ ] Learning sed command 🛫 2025-06-27 
 - [ ] Learning how to use graphviz 🛫 2025-06-27 
