--- a/DailyNotes/2025-07-08.md
+++ b/DailyNotes/2025-07-08.md
@@ -1,12 +1,19 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-08
 ---
 ## Daily Essay
+Resolve ssh connection issue on orcale linux, sshd port listening need to setup SELinux, command as below.
+selinux port open:
+`sudo semanage port -a -t ssh_port_t -p tcp 8022`
+check port listening:
+`sudo ss -tuln | grep 8022`
 
 ## Today Progress
+Created and completed note [[nc]], it is a very useful tool for internet connection diagnosis.
 
 ## Todo List
+- [ ] Compete [[Golang]] note 🛫 2025-06-27
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
 - [ ] Learning sed command 🛫 2025-06-27 
 - [ ] Learning how to use graphviz 🛫 2025-06-27 
