--- a/DailyNotes/2025-07-09.md
+++ b/DailyNotes/2025-07-09.md
@@ -1,12 +1,15 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-09
 ---
 ## Daily Essay
+Completed leet code number 168, 169, 171 question.
 
 ## Today Progress
+Updated FET_system patch update status.
 
 ## Todo List
+- [x] Compete [[Golang]] note 🛫 2025-06-27 ✅ 2025-07-09
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
 - [ ] Learning sed command 🛫 2025-06-27 
 - [ ] Learning how to use graphviz 🛫 2025-06-27 
