--- a/DailyNotes/2025-07-10.md
+++ b/DailyNotes/2025-07-10.md
@@ -1,10 +1,12 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-10
 ---
 ## Daily Essay
-completed leetcode questions 746, 1025.
+Solved leetcode questions 338, 392, 509.
+
 ## Today Progress
+Submitted TWM-IOT vulnanerable solutions.
 
 ## Todo List
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
