--- a/DailyNotes/2025-07-11.md
+++ b/DailyNotes/2025-07-11.md
@@ -1,9 +1,9 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-11
 ---
 ## Daily Essay
-
+completed leetcode questions 746, 1025.
 ## Today Progress
 
 ## Todo List
