--- a/DailyNotes/2025-07-14.md
+++ b/DailyNotes/2025-07-14.md
@@ -1,9 +1,11 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-14
 ---
 ## Daily Essay
+Solved leetcode questions 1137, 1668, 2700, all easy DP questions are solved, now go to other topic question.
 
+solved leetcode question 217, 219, and learned how to created hash table.
 ## Today Progress
 
 ## Todo List
