--- a/DailyNotes/2025-07-15.md
+++ b/DailyNotes/2025-07-15.md
@@ -1,9 +1,9 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-15
 ---
 ## Daily Essay
-
+Resolved leetcode question 228, 283, 303, 349.
 ## Today Progress
 
 ## Todo List
