--- a/DailyNotes/2025-07-17.md
+++ b/DailyNotes/2025-07-17.md
@@ -1,10 +1,13 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-17
 ---
 ## Daily Essay
+resolved leetcode questions 350.
 
 ## Today Progress
+Assistanced TWM-MLAP mariadb upgred.
+Assistanced reply CHT-emome-radius customer question.
 
 ## Todo List
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
