--- a/DailyNotes/2025-07-21.md
+++ b/DailyNotes/2025-07-21.md
@@ -1,10 +1,12 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-21
 ---
 ## Daily Essay
+Go-buncer 2.0 project was launch.
 
 ## Today Progress
+Create KMS node for FET-AIC and FET-LDP MA process.
 
 ## Todo List
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
@@ -14,4 +16,3 @@ created: {{date}}
 - [ ] Learning how to use perf 🛫 2025-06-27 
 - [ ] Learning how to use LaTeX 🛫 2025-06-27
 - [ ] Learning how to use tcpdump on linux 🛫 2025-07-02 
-- [ ] Learning how to use dd 🛫 2025-07-22 
