--- a/DailyNotes/2025-07-22.md
+++ b/DailyNotes/2025-07-22.md
@@ -1,9 +1,13 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-22
 ---
 ## Daily Essay
+Solved leetcode question 414.
 
+I think now can start to practice implement some algorithm like quick sort or merge sort indepentently.
+
+practice some bash shorcut, it is very useful.
 ## Today Progress
 
 ## Todo List
