--- a/DailyNotes/2025-07-23.md
+++ b/DailyNotes/2025-07-23.md
@@ -1,10 +1,14 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-23
 ---
 ## Daily Essay
+Newcomer orientation.
+Wrote some note for tmux.
 
+Solved leetcode question 448.
 ## Today Progress
+reply cht ask, apple OTA domain modified test.
 
 ## Todo List
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
@@ -15,3 +19,4 @@ created: {{date}}
 - [ ] Learning how to use LaTeX 🛫 2025-06-27
 - [ ] Learning how to use tcpdump on linux 🛫 2025-07-02 
 - [ ] Learning how to use dd 🛫 2025-07-22 
+- [ ] Learning how to use `ss` 🛫 2025-07-23
