--- a/DailyNotes/2025-07-24.md
+++ b/DailyNotes/2025-07-24.md
@@ -1,8 +1,10 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-24
 ---
 ## Daily Essay
+Solved Leetcode questions 455, .
+Quick sort function exercise: Write a quick sort function and implement it using iteration.
 
 ## Today Progress
 
