--- a/DailyNotes/2025-07-25.md
+++ b/DailyNotes/2025-07-25.md
@@ -1,8 +1,9 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-07-25
 ---
 ## Daily Essay
+Solved LeetCode questions 463, 485, 495.
 
 ## Today Progress
 
