--- a/DailyNotes/2025-09-03.md
+++ b/DailyNotes/2025-09-03.md
@@ -1,10 +1,13 @@
 ---
 tags: Daily, Essay, todo, list
-created: {{date}}
+created: 2025-09-03
 ---
 ## Daily Essay
 
+
 ## Today Progress
+Create work environment , install betterbird and setup email.
+Fellow new employee guide to 200 step, and had apply HP pulsar account. 
 
 ## Todo List
 - [ ] Build the Obsidian plugin: Mirror Structure Attachment Management 🛫 2025-06-27 
